fixed overflow on smaller screen

--- a/style.css
+++ b/style.css
@@ -50,3 +50,5 @@ body{
     text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.7);
 }
 
+* {
+  outline: 1px solid red;}
